play with layout

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,8 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
 		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
 	</script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css')}}">
 	<title>Milestone-3-Project-dc</title>
 </head>
@@ -35,21 +37,14 @@
 				<li class="nav-item">
 					<a class="nav-link" href="{{url_for('signup')}}">Sign up</a>
 				</li>
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="{{url_for('index')}}" id="navbarDropdown" role="button"
-						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						Dropdown
-					</a>
-					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="{{url_for('login')}}">Login </a>
-						<a class="dropdown-item" href="{{url_for('index')}}">Another action</a>
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="{{url_for('index')}}">Something else here</a>
-					</div>
+                <li class="nav-item">
+					<a class="nav-link" href="{{url_for('login')}}">Login</a>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link disabled" href="{{url_for('index')}}" tabindex="-1" aria-disabled="true">Disabled</a>
+                <li class="nav-item">
+					<a class="nav-link" href="{{url_for('workspace')}}">Workspace</a>
 				</li>
+			
+			
 			</ul>
 			<form class="form-inline my-2 my-lg-0">
 				<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
