add button to sub navbar

--- a/templates/workspace.html
+++ b/templates/workspace.html
@@ -5,7 +5,7 @@
 <nav class="navbar navbar-light bg-light">
   <form class="form-inline">
     <button class="btn btn-primary" type="button">+</button>
-    <button class="btn btn-outline-success" type="button">Main button</button>
+    <button class="btn btn-secondary" type="button">Main button</button>
     <button class="btn btn-outline-success" type="button">Main button</button>
     <button class="btn btn-outline-success" type="button">Main button</button>
     
