play with ideas

--- a/templates/workspace.html
+++ b/templates/workspace.html
@@ -4,9 +4,9 @@
 <p>You are logged on to your workspace{{user}}</p>
 <nav class="navbar navbar-light bg-light">
   <form class="form-inline">
-    <button class="btn btn-primary" type="button">+</button>
-    <button class="btn btn-secondary" type="button">Main button</button>
-    <button class="btn btn-outline-success" type="button">Main button</button>
+    <button class="btn btn-primary" type="button">New Board</button>
+    <button class="btn btn-secondary" type="button">New List</button>
+    <button class="btn btn-outline-success" type="button">New Card</button>
     <button class="btn btn-outline-success" type="button">Main button</button>
     
   </form>
