--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,15 @@
-body{
+html,body{
+    width: 100%;
+    height: 900px;
     background-color: red;
+}
+
+.row{
+    display: inline;
+}
+.col-1{
+    width:100px;
+    height: 80%;
+    background-color: blue;
+    border: 2px solid black;
 }
