--- a/templates/workspace.html
+++ b/templates/workspace.html
@@ -11,7 +11,18 @@
     
   </form>
 </nav>
-<i class="material-icons">
-add_box
-</i>
+<div class="row">
+    <div class="col-1"></div>
+    <div class="col-1"></div>
+    <div class="col-1"></div>
+    <div class="col-1"></div>
+    <div class="col-1"></div>
+    <div class="col-1"></div>
+    <div class="col-1"></div>
+    <div class="col-1"></div>
+    <div class="col-1"></div>
+    <div class="col-1"></div>
+    <div class="col-1"></div>
+    <div class="col-1"></div>
+</div>
 {% endblock %}
