--- a/templates/workspace.html
+++ b/templates/workspace.html
@@ -1,28 +1,34 @@
 {% extends 'base.html'%}
 {% block content %}
 <h2>{{page_title}}</h2>
-<p>You are logged on to your workspace{{user}}</p>
-<nav class="navbar navbar-light bg-light">
-  <form class="form-inline">
-    <button class="btn btn-primary" type="button">New Board</button>
-    <button class="btn btn-secondary" type="button">New List</button>
-    <button class="btn btn-outline-success" type="button">New Card</button>
-    <button class="btn btn-outline-success" type="button">Main button</button>
+<p>You are logged on to your workspace {{ user }}</p>
+<div class="card mb-3" style="max-width: 540px;">
+  <div class="row no-gutters">
+    <div class="col-md-4">
+      <img src="{{url_for('static',filename='images/gold.jpeg')}}" class="card-img" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="card mb-3" style="max-width: 540px;">
+  <div class="row no-gutters">
     
-  </form>
-</nav>
-<div class="row">
-    <div class="col-1"></div>
-    <div class="col-1"></div>
-    <div class="col-1"></div>
-    <div class="col-1"></div>
-    <div class="col-1"></div>
-    <div class="col-1"></div>
-    <div class="col-1"></div>
-    <div class="col-1"></div>
-    <div class="col-1"></div>
-    <div class="col-1"></div>
-    <div class="col-1"></div>
-    <div class="col-1"></div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <img src="{{url_for('static',filename='images/gold.jpeg')}}" class="card-img" alt="...">
+    </div>
+  </div>
 </div>
 {% endblock %}
