--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 <h2>{{page_title}}</h2>
-<div class="jumbotron">
+
+<div class="jumbotron" style="background-image: url('static/images/ny3.jfif')">
 	<h1 class="display-4">Hello, world!</h1>
 	<p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
 		featured content or information.</p>
