--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,4 +1,35 @@
 {% extends 'base.html'%}
 {% block content %}
-    <h2>{{page_title}}</h2>
+<h2>{{page_title}}</h2>
+<form class="signup">
+	<div class="form-row" style="max-width:500px;">
+		<div class="col-md-12">
+			<label for="validationDefault01">First name</label>
+			<input type="text" class="form-control" id="validationDefault01" value="Mark" required>
+        </div>
+		
+        <div class="col-md-12">
+			<label for="validationDefault02">Last name</label>
+			<input type="text" class="form-control" id="validationDefault02" value="Ruffalo" required>
+        </div>
+		
+        <div class="col-md-12">
+			<label for="validationDefault03">Email</label>
+			<input type="text" class="form-control" id="validationDefault03" value="markruff@email.com" required>
+        </div>
+		
+        <div class="col-md-12">
+			<label for="validationDefault04">Password</label>
+			<input type="text" class="form-control" id="validationDefault04" value="password" required>
+        </div>
+        <div class="col-md-12">
+			<label for="validationDefault05">Confirm Password</label>
+			<input type="text" class="form-control" id="validationDefault05" value="password" required>
+        </div>
+       
+		
+        </div>
+        <br>
+          <button type="submit" class="btn btn-primary">Submit</button>
+</form>
 {% endblock %}
