--- a/templates/workspace.html
+++ b/templates/workspace.html
@@ -2,10 +2,10 @@
 {% block content %}
 <h2>{{page_title}}</h2>
 <p>You are logged on to your workspace {{ user }}</p>
-<div class="card mb-3" style="max-width: 540px;">
+<div class="card mb-3" style="max-width: 1000px;">
   <div class="row no-gutters">
     <div class="col-md-4">
-      <img src="{{url_for('static',filename='images/gold.jpeg')}}" class="card-img" alt="...">
+      <img src="{{url_for('static',filename='images/foggy.jpeg')}}" class="card-img" alt="...">
     </div>
     <div class="col-md-8">
       <div class="card-body">
@@ -16,7 +16,7 @@
     </div>
   </div>
 </div>
-<div class="card mb-3" style="max-width: 540px;">
+<div class="card mb-3" style="max-width: 1000px;">
   <div class="row no-gutters">
     
     <div class="col-md-8">
