--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,18 +1,23 @@
-html,body{
+html,body {
     width: 100%;
     height: 900px;
     
 }
 
-.jumbotron{
+.jumbotron {
     color: white;
 }
 
-img.card-img{
+img.card-img {
     width: 330px;
     height: 190px;
 }
 
-.signup{
+.signup, .login {
     margin: 100px 100px 100px 100px;
 }
+
+#index {
+    background-image: url("static/images/ny3.jpeg");
+}
+
