--- a/templates/signup.html
+++ b/templates/signup.html
@@ -12,6 +12,10 @@
 			<label for="validationDefault02">Last name</label>
 			<input type="text" class="form-control" id="validationDefault02" value="Ruffalo" required>
         </div>
+         <div class="col-md-12">
+			<label for="validationDefault06">User Name</label>
+			<input type="text" class="form-control" id="validationDefault06" value="mruff" required>
+        </div>
 		
         <div class="col-md-12">
 			<label for="validationDefault03">Email</label>
