--- a/templates/workspace.html
+++ b/templates/workspace.html
@@ -3,18 +3,18 @@
 <h2>{{page_title}}</h2>
 <p>You are logged on to your workspace {{ user }}</p>
     {% for blog in blogs %}
-      {{loop.index}}  
+      {{ loop.index }}  
       {% if loop.index % 2 !=0 %}
     
 <div class="card mb-3" style="max-width: 1000px;">
   <div class="row no-gutters">
     <div class="col-md-4">
-      <img src="{{blog.image_src}}" class="card-img" alt="...">
+      <img src="{{ blog.image_src }}" class="card-img" alt="...">
     </div>
     <div class="col-md-8">
       <div class="card-body">
-        <h5 class="card-title">{{blog.title}}</h5>
-        <p class="card-text">{{blog.body}}</p>
+        <h5 class="card-title"><a href="/workspace/{{ blog.url }}">{{ loop.index }}.{{ blog.title }}</a></h5>
+        <p class="card-text">{{ blog.body }}</p>
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
     </div>
@@ -26,13 +26,13 @@
     
     <div class="col-md-8">
       <div class="card-body">
-        <h5 class="card-title">{{blog.title}}</h5>
-        <p class="card-text">{{blog.body}}</p>
+        <h5 class="card-title"><a href="/workspace/{{ blog.url }}">{{ loop.index }}.{{ blog.title }}</a></h5>
+        <p class="card-text">{{ blog.body }}</p>
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
     </div>
     <div class="col-md-4">
-      <img src="{{blog.image_src}}" class="card-img" alt="...">
+      <img src="{{ blog.image_src }}" class="card-img" alt="...">
     </div>
   </div>
 </div>
