--- a/templates/blog.html
+++ b/templates/blog.html
@@ -5,6 +5,13 @@
         <h1>{{ blog.title }}</h1>
         <img src="{{ blog.image_src }}" class="card-img">
         <p>{{ blog.body }}</p>
+        <button>Update</button>
+        <button>Delete</button>
+        <form>
+            <input type="text" value="{{blog.body}}">
+        
+        </form>
+
     </div>
 </div>
 
