--- a/templates/workspace.html
+++ b/templates/workspace.html
@@ -15,7 +15,8 @@
       <div class="card-body">
         <h5 class="card-title"><a href="/workspace/{{ blog.url }}">{{ loop.index }}. {{ blog.title }}</a></h5>
         <p class="card-text">{{ blog.body }}</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <p class="card-text">{{ blog.user_name }}</p>
+        <p class="card-text"><small class="text-muted">{{blog.date}}</small></p>
       </div>
     </div>
   </div>
@@ -28,7 +29,8 @@
       <div class="card-body">
         <h5 class="card-title"><a href="/workspace/{{ blog.url }}">{{ loop.index }}. {{ blog.title }}</a></h5>
         <p class="card-text">{{ blog.body }}</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <p class="card-text">{{ blog.user_name }}</p>
+        <p class="card-text"><small class="text-muted">{{blog.date}}</small></p>
       </div>
     </div>
     <div class="col-md-4">
