--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 
-<div id="index">
+<div id="index" class="jumbotron text-center" style="color:black;">
     <h2>{{page_title}}</h2>
-    
-
+    <p>Welcome to My financial Blog. </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod dolore animi doloribus ea, quibusdam deleniti neque. Ab, animi sit libero quo deserunt dolorum hic similique veritatis suscipit, quas aperiam harum!</p>
 </div>
 
 
