--- a/templates/workspace.html
+++ b/templates/workspace.html
@@ -9,7 +9,7 @@
 <div class="card mb-3" style="max-width: 1000px;">
   <div class="row no-gutters">
     <div class="col-md-4">
-      <img src="{{ blog.image_src }}" class="card-img" alt="...">
+      <img src="{{ blog.img_src }}" class="card-img" alt="...">
     </div>
     <div class="col-md-8">
       <div class="card-body">
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="col-md-4">
-      <img src="{{ blog.image_src }}" class="card-img" alt="...">
+      <img src="{{ blog.img_src }}" class="card-img" alt="...">
     </div>
   </div>
 </div>
