end of day commit

--- a/templates/workspace.html
+++ b/templates/workspace.html
@@ -13,7 +13,7 @@
     </div>
     <div class="col-md-8">
       <div class="card-body">
-        <h5 class="card-title"><a href="/workspace/{{ blog.url }}">{{ loop.index }}. {{ blog.title }}</a></h5>
+        <h5 class="card-title"><a href="/workspace/{{ blog.title }}">{{ loop.index }}. {{ blog.title }}</a></h5>
         <p class="card-text">{{ blog.body }}</p>
         <p class="card-text">{{ blog.user_name }}</p>
         <p class="card-text"><small class="text-muted">{{blog.date}}</small></p>
@@ -27,7 +27,7 @@
     
     <div class="col-md-8">
       <div class="card-body">
-        <h5 class="card-title"><a href="/workspace/{{ blog.url }}">{{ loop.index }}. {{ blog.title }}</a></h5>
+        <h5 class="card-title"><a href="/workspace/{{ blog.title }}">{{ loop.index }}. {{ blog.title }}</a></h5>
         <p class="card-text">{{ blog.body }}</p>
         <p class="card-text">{{ blog.user_name }}</p>
         <p class="card-text"><small class="text-muted">{{blog.date}}</small></p>
