--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,9 +1,10 @@
 {% extends 'base.html'%}
 {% block content %}
+
 <div class="row">
     <div class="column">
         <h1>{{ blog.title }}</h1>
-        <img src="{{ blog.image_src }}" class="card-img">
+        <img src="{{ blog.img_src }}" class="card-img">
         <p>{{ blog.body }}</p>
         <button>Update</button>
         <button>Delete</button>
@@ -14,5 +15,6 @@
 
     </div>
 </div>
+
 
 {% endblock %}
