--- a/templates/signup.html
+++ b/templates/signup.html
@@ -10,39 +10,31 @@
 </ul>
 {% endif %}
 {% endwith %}
-<form class="signup" method="POST">
-	<div class="form-row" style="max-width:500px;">
-		<div class="col-md-12">
-			<label for="validationDefault01">First name</label>
-			<input type="text" class="form-control" id="validationDefault01"  required name="fname">
-        </div>
-		
-        <div class="col-md-12">
-			<label for="validationDefault02">Last name</label>
-			<input type="text" class="form-control" id="validationDefault02"  required name="lname">
-        </div>
-         <div class="col-md-12">
-			<label for="validationDefault06">User Name</label>
-			<input type="text" class="form-control" id="validationDefault06"  required name="user">
-        </div>
-		
-        <div class="col-md-12">
-			<label for="validationDefault03">Email</label>
-			<input type="text" class="form-control" id="validationDefault03"  required name="email">
-        </div>
-		
-        <div class="col-md-12">
-			<label for="validationDefault04">Password</label>
-			<input type="text" class="form-control" id="validationDefault04"  required name="password">
-        </div>
-        <div class="col-md-12">
-			<label for="validationDefault05">Confirm Password</label>
-			<input type="text" class="form-control" id="validationDefault05"  required name="confirm_password">
-        </div>
-       
-		
-        </div>
-        <br>
-          <button type="submit" class="btn btn-primary">Submit</button>
+{% from "includes/_formhelpers.html" import render_field %}
+<form class="signup" method="POST" action="">
+	<div class="form-group" style="max-width:500px;">
+       {{render_field(form.name, class="form-control")}}
+	</div>
+    <div class="form-group" style="max-width:500px;">
+        {{render_field(form.email, class="form-control")}}
+	</div>
+    <div class="form-group" style="max-width:500px;">
+       {{render_field(form.username, class="form-control")}} 
+	</div>
+    <div class="form-group" style="max-width:500px;">
+        {{render_field(form.password, class="form-control")}}
+	</div>
+    <div class="form-group" style="max-width:500px;">
+       {{render_field(form.confirm, class="form-control")}} 
+	</div>
+    <div class="form-group" style="max-width:500px;">
+       {{render_field(form.accept_tos, class="form-control")}} 
+	</div>
+    <input type="submit" value="Register" class="btn btn-primary">	
 </form>
 {% endblock %}
+
+        
+        
+        
+        
