--- a/templates/signup.html
+++ b/templates/signup.html
@@ -13,19 +13,19 @@
 {% from "includes/_formhelpers.html" import render_field %}
 <form class="signup" method="POST" action="" id="users" name="users">
 	<div class="form-group" style="max-width:500px;" >
-       {{render_field(form.name, class="form-control",id="name" name="name")}}
+       {{render_field(form.name, class="form-control",id="name" )}}
 	</div>
     <div class="form-group" style="max-width:500px;" >
-        {{render_field(form.email, class="form-control",id="email" name="email")}}
+        {{render_field(form.email, class="form-control",id="email" )}}
 	</div>
     <div class="form-group" style="max-width:500px;">
-       {{render_field(form.username, class="form-control",id="user_name" name="user_name")}} 
+       {{render_field(form.username, class="form-control",id="user_name" )}} 
 	</div>
     <div class="form-group" style="max-width:500px;">
-        {{render_field(form.password, class="form-control", id="password" name="password")}}
+        {{render_field(form.password, class="form-control", id="password" )}}
 	</div>
     <div class="form-group" style="max-width:500px;">
-       {{render_field(form.confirm, class="form-control",id="confirm" name="confirm_pass")}} 
+       {{render_field(form.confirm, class="form-control",id="confirm")}} 
 	</div>
     <div class="form-group" style="max-width:500px;">
        {{render_field(form.accept_tos, class="form-control", id="accept_tos")}} 
