--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
 					<a class="nav-link" href="{{url_for('login')}}">Login</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="{{url_for('workspace')}}">Blogs</a>
+					<a class="nav-link" href="{{url_for('blogs')}}">Blogs</a>
 				</li>
 
 
