--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -5,7 +5,7 @@
     {% for blog in blogs %}
       {{ loop.index }}  
       {% if loop.index % 2 !=0 %}
-  <!--{{ url_for('blog',blog_id=blog._id)}}  -->
+  
 <div class="card mb-3" style="max-width: 1000px;">
   <div class="row no-gutters">
     <div class="col-md-4">
@@ -13,7 +13,7 @@
     </div>
     <div class="col-md-8">
       <div class="card-body">
-        <h5 class="card-title"><a href="/blogs/{{ blog.title }}">{{ loop.index }}. {{ blog.title }}</a></h5>
+      <h5 class="card-title"><a href="/blog/{{ blog._id }}">{{ loop.index }}. {{ blog.title }}</a></h5>
         <p class="card-text">{{ blog.body }}</p>
         <p class="card-text">{{ blog.user_name }}</p>
         <p class="card-text"><small class="text-muted">{{blog.date}}</small></p>
@@ -27,7 +27,7 @@
     
     <div class="col-md-8">
       <div class="card-body">
-        <h5 class="card-title"><a href="/blogs/{{ blog.title }}">{{ loop.index }}. {{ blog.title }}</a></h5>
+       <h5 class="card-title"><a href="/blog/{{ blog._id }}">{{ loop.index }}. {{ blog.title }}</a></h5>
         <p class="card-text">{{ blog.body }}</p>
         <p class="card-text">{{ blog.user_name }}</p>
         <p class="card-text"><small class="text-muted">{{blog.date}}</small></p>
