--- a/templates/base.html
+++ b/templates/base.html
@@ -33,18 +33,22 @@
 				<li class="nav-item active">
 					<a class="nav-link" href="{{url_for('index')}}">Home <span class="sr-only">(current)</span></a>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="{{url_for('signup')}}">Sign up</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="{{url_for('login')}}">Login</a>
-				</li>
+			
 				<li class="nav-item">
 					<a class="nav-link" href="{{url_for('blogs')}}">Blogs</a>
 				</li>
 
 
 			</ul>
+            <ul class="navbar-nav navbar-right">
+			
+				<li class="nav-item">
+					<a class="nav-link" href="{{url_for('signup')}}">Sign up</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="{{url_for('login')}}">Login</a>
+				</li>
+		    </ul>
 			
 		</div>
 	</nav>
