--- a/templates/base.html
+++ b/templates/base.html
@@ -41,13 +41,18 @@
 
 			</ul>
             <ul class="navbar-nav navbar-right">
-			
+                {% if session.logged_in %}
+                </li>
+                	<li class="nav-item">
+					<a class="nav-link" href="{{url_for('logout')}}">LogOut</a>
+				</li>
+                {% else %}
 				<li class="nav-item">
 					<a class="nav-link" href="{{url_for('signup')}}">Sign up</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="{{url_for('login')}}">Login</a>
-				</li>
+				{% endif %}
 		    </ul>
 			
 		</div>
