--- a/templates/edit.html
+++ b/templates/edit.html
@@ -2,10 +2,11 @@
 {% block content %}
 <h2>{{page_title}}</h2>
 <p>You are logged on to your workspace {{session.username }}</p>
+<a class=" btn btn-primary" href="/add_blog">Add Blog </a>
     {% for blog in blogs %}
       {{ loop.index }}  
       {% if loop.index % 2 !=0 %}
-  
+
 <div class="card mb-3" style="max-width: 1000px;">
   <div class="row no-gutters">
     <div class="col-md-4">
@@ -21,7 +22,6 @@
     </div>
   </div>
   </div>
-  {% else %}
 <div class="card mb-3" style="max-width: 1000px;">
   <div class="row no-gutters">
     
