--- a/templates/edit.html
+++ b/templates/edit.html
@@ -3,8 +3,10 @@
 <h2>{{page_title}}</h2>
 <p>You are logged on to your workspace {{session.username }}</p>
 <a class=" btn btn-primary" href="/add_blog">Add Blog </a>
+<br>
+<hr>
     {% for blog in blogs %}
-      {{ loop.index }}  
+      
       {% if loop.index % 2 !=0 %}
 
 <div class="card mb-3" style="max-width: 1000px;">
@@ -22,6 +24,7 @@
     </div>
   </div>
   </div>
+  {% else %}
 <div class="card mb-3" style="max-width: 1000px;">
   <div class="row no-gutters">
     
