--- a/templates/add_blog.html
+++ b/templates/add_blog.html
@@ -21,6 +21,12 @@
     <div class="form-group" style="max-width:500px;">
         {{render_field(form.username, class="form-control", id="blog_username" )}}
 	</div>
+    <div class="form-group" style="max-width:500px;">
+        {{render_field(form.date, class="form-control", id="blog_date" )}}
+	</div>
+     <div class="form-group" style="max-width:500px;">
+        {{render_field(form.img_src, class="form-control", id="blog_img_src" )}}
+	</div>
     <input type="submit" value="Add Blog" class="btn btn-primary">	
 </form>
 	
