--- a/templates/edit.html
+++ b/templates/edit.html
@@ -20,6 +20,8 @@
         <p class="card-text">{{ blog.body }}</p>
         <p class="card-text">{{ blog.user_name }}</p>
         <p class="card-text"><small class="text-muted">{{blog.date}}</small></p>
+        <p class="card-text"><small class="text-muted">{{blog._id}}</small></p>
+        
       </div>
     </div>
   </div>
@@ -34,6 +36,7 @@
         <p class="card-text">{{ blog.body }}</p>
         <p class="card-text">{{ blog.user_name }}</p>
         <p class="card-text"><small class="text-muted">{{blog.date}}</small></p>
+        <p class="card-text"><small class="text-muted">{{blog._id}}</small></p>
       </div>
     </div>
     <div class="col-md-4">
