--- a/templates/edit.html
+++ b/templates/edit.html
@@ -5,7 +5,7 @@
 <a class=" btn btn-primary" href="/add_blog">Add Blog </a>
 <br>
 <hr>
-    {% for blog in blogs %}
+    {% for blog in blogs|sort(reverse=true,attribute='_id') %}
       
       {% if loop.index % 2 !=0 %}
 
