--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,8 @@
 
 	{% endblock%}
     </div>
+    <script src="https://cdn.ckeditor.com/4.13.1/standard/ckeditor.js"></script>
+    <script type="text/javascript">CKEDITOR.replace('editor')</script>
 </body>
 
 </html>
