--- a/templates/add_blog.html
+++ b/templates/add_blog.html
@@ -16,7 +16,7 @@
        {{render_field(form.title, class="form-control",id="blog_title" )}} 
 	</div>
     <div class="form-group" style="max-width:500px;">
-       {{render_field(form.body, class="form-control",id="blog_body" )}} 
+       {{render_field(form.body, class="form-control",id="editor" )}} 
 	</div>
     <div class="form-group" style="max-width:500px;">
         {{render_field(form.username, class="form-control", id="blog_username" )}}
