--- a/templates/blog.html
+++ b/templates/blog.html
@@ -6,6 +6,10 @@
         <h1 id="title" name="title">{{ blog.title }}</h1>
         <img src="{{ blog.img_src }}" class="card-img" id="img_src" name="img_src">
         <p>{{ blog.body }}</p>
+        {% if session.logged_in %}
+        <a class=" btn btn-primary" href="/edit_blog/{{ blog._id }}">Edit Blog </a>
+        <a class=" btn btn-primary" href="/delete_blog">Delete Blog </a>
+        {% endif %}
     </div>
 </div>
 {% endfor %}
