--- a/templates/edit.html
+++ b/templates/edit.html
@@ -21,7 +21,8 @@
         <p class="card-text">{{ blog.user_name }}</p>
         <p class="card-text"><small class="text-muted">{{blog.date}}</small></p>
         <p class="card-text"><small class="text-muted">{{blog._id}}</small></p>
-        
+        {% if session.logged_in %}
+        {% endif %}
       </div>
     </div>
   </div>
@@ -37,7 +38,10 @@
         <p class="card-text">{{ blog.user_name }}</p>
         <p class="card-text"><small class="text-muted">{{blog.date}}</small></p>
         <p class="card-text"><small class="text-muted">{{blog._id}}</small></p>
+        {% if session.logged_in %}
+        {% endif %}
       </div>
+      
     </div>
     <div class="col-md-4">
       <img src="{{ blog.img_src }}" class="card-img" alt="...">
