--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,9 @@
 	{% endblock%}
     </div>
     <script src="https://cdn.ckeditor.com/4.13.1/standard/ckeditor.js"></script>
-    <script type="text/javascript">CKEDITOR.replace('editor')</script>
+     <script type="text/javascript">
+        CKEDITOR.replace( 'editor' );
+    </script>
 </body>
 
 </html>
