--- a/templates/edit_blog.html
+++ b/templates/edit_blog.html
@@ -12,21 +12,21 @@
 {% endwith %}
 {% from "includes/_formhelpers.html" import render_field %}
 {% for blog in blogs %}
-<form class="edit_blog" method="POST" action="/edit_blog" id="users" name="users">
+<form class="edit_blog" method="POST" action="{{ url_for('edit_blog', blog_id=blog._id) }}"  id="users" name="users">
      <div class="form-group" style="max-width:500px;">
-       {{render_field(form.title, class="form-control",id="blog_title")}} 
+       {{render_field(form.title, class="form-control",id="blog_title",value=blog.title)}} 
 	</div>
     <div class="form-group" style="max-width:500px;">
-       {{render_field(form.body, class="form-control",id="editor")}} 
+       {{render_field(form.body, class="form-control",id="editor", value=blog.body)}} 
 	</div>
     <div class="form-group" style="max-width:500px;">
-        {{render_field(form.username, class="form-control", id="blog_username")}}
+        {{render_field(form.username, class="form-control", id="blog_username",value=blog.user_name)}}
 	</div>
     <div class="form-group" style="max-width:500px;">
-        {{render_field(form.date, class="form-control", id="blog_date")}}
+        {{render_field(form.date, class="form-control", id="blog_date", value=blog.date)}}
 	</div>
      <div class="form-group" style="max-width:500px;">
-        {{render_field(form.img_src, class="form-control", id="blog_img_src")}}
+        {{render_field(form.img_src, class="form-control", id="blog_img_src",value=blog.img_src)}}
 	</div>
     <input type="submit" value="Update Blog" class="btn btn-primary">	
 </form>
