editor link enabled

--- a/templates/base.html
+++ b/templates/base.html
@@ -67,11 +67,11 @@
 
 	{% endblock%}
     </div>
-    <!---
+    
     <script src="https://cdn.ckeditor.com/4.13.1/standard/ckeditor.js"></script>
      <script type="text/javascript">
         CKEDITOR.replace( 'editor' );
-    </script>-->
+    </script>
 </body>
 
 </html>
