--- a/templates/blog.html
+++ b/templates/blog.html
@@ -8,7 +8,7 @@
         <p>{{ blog.body }}</p>
         {% if session.logged_in %}
         <a class=" btn btn-primary" href="/edit_blog/{{ blog._id }}">Edit Blog </a>
-        <a class=" btn btn-primary" href="/delete_blog">Delete Blog </a>
+        <a class=" btn btn-primary" href="/delete_blog/{{blog._id}}">Delete Blog </a>
         {% endif %}
     </div>
 </div>
