--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -13,11 +13,10 @@
     </div>
     <div class="col-md-8">
       <div class="card-body">
-      <h5 class="card-title"><a href="/blog/{{ blog._id }}">{{ loop.index }}. {{ blog.title }}</a></h5>
+      <h5 class="card-title"><a href="/blog/{{ blog._id }}">{{ blog.title }}</a></h5>
         <p class="card-text">{{ blog.body | safe }}</p>
         <p class="card-text">{{ blog.user_name }}</p>
         <p class="card-text"><small class="text-muted">{{blog.date}}</small></p>
-        <p class="card-text"><small class="text-muted">{{blog._id}}</small></p>
       </div>
     </div>
   </div>
@@ -28,11 +27,10 @@
     
     <div class="col-md-8">
       <div class="card-body">
-       <h5 class="card-title"><a href="/blog/{{ blog._id }}">{{ loop.index }}. {{ blog.title }}</a></h5>
+       <h5 class="card-title"><a href="/blog/{{ blog._id }}">{{ blog.title }}</a></h5>
         <p class="card-text">{{ blog.body | safe}}</p>
         <p class="card-text">{{ blog.user_name }}</p>
         <p class="card-text"><small class="text-muted">{{blog.date}}</small></p>
-        <p class="card-text"><small class="text-muted">{{blog._id}}</small></p>
       </div>
     </div>
     <div class="col-md-4">
