delete jumbotron to improve look and semantics

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,13 @@
 {% extends 'base.html'%}
 
 {% block content %}
-
-<div id="index" class="jumbotron text-center" style="color:black;">
+<br>
+<hr>
+<div id="hero-welcome" class="" style="color:black;">
     <h2>{{page_title}}</h2>
-    <p>Welcome to My financial Blog. </p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod dolore animi doloribus ea, quibusdam deleniti neque. Ab, animi sit libero quo deserunt dolorum hic similique veritatis suscipit, quas aperiam harum!</p>
+    <p>Screaming into the void </p>
+    <p>Bringing you news from around the Globe that you should be paying attention to.</p>
+    <p>News that will put you in a better place to act.</p>
 </div>
 
 
