--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -21,6 +21,8 @@ h1{
     float: left;
     width: 60%;
     padding: 15px;
+    text-align: center;
+    background-color: #738290;
 }
 #rhs-aside{
     background-color: orange;
@@ -30,11 +32,12 @@ h1{
 }
 #hero-welcome{
     text-align: center;
+    height: 1000px;
 }
 
 
 div.card {
-  
+  margin: auto;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: center;
 }
@@ -48,65 +51,84 @@ img.card-img {
 .signup, .login {
     margin: 100px 100px 100px 100px;
 }
-* Fixed/sticky icon bar (vertically aligned 50% from the top of the screen) */
-div.icon-bar {
-  width: 60px;
+/* sky blue youtube tutorial on sticky social media */
+.icon-bar {
   position: fixed;
-  top: 80%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-  
-  z-index: 1;
-}
-
-/* Style the icon bar links */
-.icon-bar a {
-  display: block;
-  text-align: center;
-  padding: 16px;
-  transition: all 0.3s ease;
-  color: white;
-  font-size: 20px;
-  width: 60px;
+  top: 40%;
   
 }
 
-/* Style the social media icons with color, if you want */
-.icon-bar a:hover {
-  background-color: #000;
+.icon-bar ul{
+  list-style-type: none;
+  padding: 0;
+  transform: translateX(-250px);
 }
 
-.facebook {
+.icon-bar ul li{
+    display: block;
+    margin: 5px;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 300px;
+    text-align: right;
+    padding: 10px;
+    border-radius: 0 30px 30px 0;
+    transition: all 1s;
+    
+}
+
+.icon-bar ul li:hover{
+    transform: translateX(110px); 
+}
+
+.icon-bar ul li.facebook:hover {
   background: #3B5998;
-  color: white;
-  margin-top: 150px;
-  margin-right: 0;
+  
 }
 
-.twitter {
+.icon-bar ul li.twitter:hover {
   background: #55ACEE;
-  color: white;
-  margin-right: 0;
+ 
 }
 
-.google {
+.icon-bar ul li.google:hover {
   background: #dd4b39;
-  color: white;
-  margin-right: 0;
+ 
 }
 
-.linkedin {
+.icon-bar ul li.linkedin:hover {
   background: #007bb5;
-  color: white;
-  margin-right: 0;
+
 }
 
-.youtube {
+.icon-bar ul li.youtube:hover {
   background: #bb0000;
-  color: white;
-  margin-right: 0;
+  
 }
+
+.icon-bar ul li a{
+    color: white;
+    text-decoration: none;
+}
+
+.icon-bar ul li i{
+    text-align: center;
+    margin-left: 15px;
+    color: #000;
+    background-color: white;
+    padding: 10px;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    font-size: 20px;
+    transform: rotate(0deg);
+}
+
+.icon-bar ul li:hover i{
+    transform: rotate(360deg);
+    transition: all 1s;
+}
+
+/* end of sky blue */
 
 
 
