--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -41,6 +41,9 @@ div.card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: center;
 }
+#blog-body-limit{
+    max-height: 200px;
+}
 
 
 img.card-img {
