--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
 	<title>Milestone-3-Project-dc</title>
 </head>
 
-<body>
+<body onload="myFunction()">
 	<header class="header">
 		<h1 class="header-title">The header of the Site</h1>
 	</header>
