--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -12,9 +12,9 @@
       <img src="{{ blog.img_src }}" class="card-img" alt="...">
     </div>
     <div class="col-md-8">
-      <div class="card-body">
+      <div class="card-body"id="blog-body-limit">
       <h5 class="card-title"><a href="/blog/{{ blog._id }}">{{ blog.title }}</a></h5>
-        <p class="card-text">{{ blog.body | safe }}</p>
+        <p class="card-text" >{{ blog.body | safe }}</p>
         <p class="card-text">{{ blog.user_name }}</p>
         <p class="card-text"><small class="text-muted">{{blog.date}}</small></p>
       </div>
@@ -26,7 +26,7 @@
   <div class="row no-gutters">
     
     <div class="col-md-8">
-      <div class="card-body">
+      <div class="card-body"id="blog-body-limit">
        <h5 class="card-title"><a href="/blog/{{ blog._id }}">{{ blog.title }}</a></h5>
         <p class="card-text">{{ blog.body | safe}}</p>
         <p class="card-text">{{ blog.user_name }}</p>
