--- a/templates/login.html
+++ b/templates/login.html
@@ -11,15 +11,24 @@
 {% endif %}
 {% endwith %}
 {% from "includes/_formhelpers.html" import render_field %}
-<form class="login" method="POST" action="/login" id="users" name="users">
+<form class="login" method="POST" action="/login" id="users-login" name="users">
     <div class="form-group" style="max-width:500px;">
-       {{render_field(form.username, class="form-control",id="user_name" )}} 
+       {{render_field(form.username, class="form-control")}} 
 	</div>
     <div class="form-group" style="max-width:500px;">
-        {{render_field(form.password, class="form-control", id="password" )}}
+        {{render_field(form.password, class="form-control" )}}
 	</div>
     <input type="submit" value="Login" class="btn btn-primary">	
 </form>
+
+<script>
+function myFunction() {
+sessionStorage.clear();
+localStorage.clear();
+document.getElementById("users-login").reset();
+  alert("Page is loaded");
+}
+</script>
 	
 
 {% endblock %}
