--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -6,13 +6,13 @@
       
     {% if loop.index % 2 != 0 %}
   
-<div class="card mb-3" style="max-width: 1000px;">
+<div class="card mb-3 " style="max-width: 1000px;height: 15rem;">
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="{{ blog.img_src }}" class="card-img" alt="...">
     </div>
     <div class="col-md-8">
-      <div class="card-body"id="blog-body-limit">
+      <div class="card-body h-100"id="blog-body-limit">
       <h5 class="card-title"><a href="/blog/{{ blog._id }}">{{ blog.title }}</a></h5>
         <p class="card-text" >{{ blog.body | safe }}</p>
         <p class="card-text">{{ blog.user_name }}</p>
