deleted the js functions that tried to clear session/local cache

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
 	<title>Milestone-3-Project-dc</title>
 </head>
 
-<body onload="myFunction()">
+<body>
 	<header class="header">
 		<h1 class="header-title">The header of the Site</h1>
 	</header>
@@ -89,13 +89,6 @@
                         <a href="#" >YouTube<i class="fa fa-youtube"></i></a>
                     </li>
                 </ul>
-				<!--<div class="icon-bar" style="width:60px;">
-					<a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-					<a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-					<a href="#" class="google"><i class="fa fa-google"></i></a>
-					<a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-					<a href="#" class="youtube"><i class="fa fa-youtube"></i></a>
-				</div>-->
 			</nav>
 		</aside>
 		<!--Adverts bar on LHS-->
