--- a/templates/base.html
+++ b/templates/base.html
@@ -20,15 +20,15 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css')}}">
-	<title>Milestone-3-Project-dc</title>
+	<title>BlogBlogBlogBlogBlogBlogBlog</title>
 </head>
 
 <body>
 	<header class="header">
-		<h1 class="header-title">The header of the Site</h1>
+		<h1 class="header-title">The Daily Blog</h1>
 	</header>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<a class="navbar-brand" href="{{url_for('index')}}">The LOGOS</a>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+		<a class="navbar-brand" href="{{url_for('index')}}">DCBlog</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
