--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
 			<nav class="icon-bar">
                 <ul >
                     <li class="facebook">
-                        <a href="www.facebook.com" >Facebook<i class="fa fa-facebook"></i></a>
+                        <a href="https://www.facebook.com" >Facebook<i class="fa fa-facebook"></i></a>
                     </li>
                 </ul>
                 <ul>
