error in links2

--- a/templates/base.html
+++ b/templates/base.html
@@ -71,12 +71,12 @@
                 </ul>
                 <ul>
                     <li class="twitter">
-                        <a href="www.twitter.com" >Twitter<i class="fa fa-twitter"></i></a>
+                        <a href="https://twitter.com" >Twitter<i class="fa fa-twitter"></i></a>
                     </li>
                 </ul>
                 <ul>
                     <li class="google">
-                        <a href="www.google.co.uk" >Google<i class="fa fa-google"></i></a>
+                        <a href="https://www.google.co.uk" >Google<i class="fa fa-google"></i></a>
                     </li>
                 </ul>
                 <ul>
@@ -86,7 +86,7 @@
                 </ul>
                 <ul>
                     <li class="youtube">
-                        <a href="www.youtube.com" >YouTube<i class="fa fa-youtube"></i></a>
+                        <a href="https://www.youtube.com" >YouTube<i class="fa fa-youtube"></i></a>
                     </li>
                 </ul>
 			</nav>
