adjusted login/signup form position

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -162,7 +162,7 @@ img.card-img {
 
 /* end of sky blue */
 
- #add_blog, #edit_blog{
+ #add_blog, #edit_blog,#users-signup,#users-login{
     padding-left: 200px;
 }
 
